force-app/main/default/objects/HRCFSL_Quoted_Labor__c/HRCFSL_Quoted_Labor__c.object-meta.xml
<CustomObject>
    <description>Custom object used to capture labor that is quoted on a Work Order.</description>
    <label>Quoted Labor</label>
    <nameField>
        <displayFormat>QL-{00000000}</displayFormat>
        <label>Quoted Labor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quoted Labor</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>