force-app/main/default/objects/HRCFSL_Quoted_Labor__c/fields/HRCFSL_Labor_Hours__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Labor_Hours__c</fullName>
    <label>Labor Hours</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>