force-app/main/default/objects/HRCFSL_Quoted_Labor__c/fields/HRCFSL_Labor_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Labor_Type__c</fullName>
    <label>Labor Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LABOR</fullName>
                <label>Labor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>