force-app/main/default/objects/HRCFSL_Quoted_Labor__c/fields/HRCFSL_Price__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Price__c</fullName>
    <label>Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>