force-app/main/default/objects/HRCFSL_Quoted_Labor__c/fields/HRCFSL_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Work_Order__c</fullName>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Quoted Labor</relationshipLabel>
    <relationshipName>Quoted_Labor</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>