force-app/main/default/objects/HRCFSL_Quoted_Labor__c/fields/HRCSVC_Discount__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Discount__c</fullName>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>